<resources>
    <string name="app_name">Artisan</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">It takes a few steps to get found by high paying clients.</string>
    <string name="intro_1_bottom">Let’s connect you to them now.</string>
    <string name="intro_2">We have a list of waiting customers for your skills.</string>
    <string name="intro_2_bottom">Simply sign up to get that job.</string>
    <string name="intro_3">You can get a tailoring job around you faster than you have ever got.</string>
    <string name="intro_3_bottom">Simply sign up to Meet waiting customers.</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="server_error">Unable to connect server.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$)</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="label_select_img">Select image</string>
    <string name="invoice">Invoice</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirmed</string>
    <string name="acc">Accepted</string>
    <string name="rej">Rejected</string>
    <string name="com">Completed</string>
    <string name="dec">Decline</string>
    <string name="dec_msg">Are you sure you want to Decline this appointment?</string>
    <string name="acc_msg">Are you sure you want to Accept this appointment?</string>
    <string name="comp">Complete</string>
    <string name="close_msg">Are your sure you want to close Wokconns?</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_message">
        Wokconns is not responsible nor reliable for transactions conducted outside
        this platform without consent from the Wokconns team.\n\n
        Wokconns is at liberty to take legal action against any artisan or
        customer that transacts outside the application.
    </string>
    <string name="yes">YES!</string>
    <string name="proceed">Proceed</string>
    <string name="i_understand">I understand</string>
    <string name="no">NO</string>
    <string name="rlOr"> OR </string>
    <string name="update_price_string">
        Enter the New Price you discussed with the Customer below.
    </string>
    <string name="continue_with_original">
        Continue with:
    </string>
    <string name="my_profile">Artisan Profile</string>
    <string name="select_img">Select Image From</string>
    <string name="select_pic">Select Picture</string>
    <string name="jobs_comleted">Jobs Completed</string>
    <string name="completion">Completion</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="review">Review</string>
    <string name="F">Hourly Rate</string>
    <string name="rate">Rate</string>
    <string name="hr">/hr</string>
    <string name="fix_rate">Fix Rate</string>
    <string name="fixed_rate">fixed rate</string>
    <string name="registration_success_msg">Welcome</string>
    <string name="select_cate">Select Category</string>
    <string name="val_cat_sele">Please select category.</string>
    <string name="val_name">Please enter full name.</string>
    <string name="val_bio">Please enter bio.</string>
    <string name="val_location">Please enter location.</string>
    <string name="val_rate">Please enter rate.</string>
    <string name="val_youtube_url">Please enter youtube url.</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please add a comment!</string>
    <string name="val_email">Please enter your email address.</string>
    <string name="val_phone">Please enter your mobile number.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Password must be at least 6 characters long.</string>
    <string name="val_pass3">Password does not match.</string>
    <string name="my_appoin">My Appointments</string>
    <string name="customer_booking">Current Booking</string>
    <string name="dec_cpas">Decline</string>
    <string name="decline_msg">Are you sure you want to decline this request?</string>
    <string name="cancel_msg">Are you sure you want to cancel this job?</string>
    <string name="finish_msg">Are you sure you want to Finish this job?</string>
    <string name="get_discount">Get Discount</string>
    <string name="code_copy">Code Copy</string>
    <string name="referral_msg">Hello, this is my Referral Code</string>
    <string name="opss_share">Oops!! It seems that you have not installed any sharing app.</string>
    <string name="support">Support</string>
    <string name="val_title">Please enter title.</string>
    <string name="profile_settings">Personal Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="my_earnings">Your Earnings</string>
    <string name="earning_graph">Earning Graph</string>
    <string name="payment">Payment</string>
    <string name="process_payment">Are you sure you want to process this payment?</string>
    <string name="home">Home</string>
    <string name="jobs">Find Jobs</string>
    <string name="jobs_home">Jobs</string>
    <string name="bookings">Bookings</string>
    <string name="job_title">Job Title:</string>
    <string name="date">Date:</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_price">Please enter price.</string>
    <string name="inprogres">In progress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="start_app">Are you sure you want to continue with this application?</string>
    <string name="start">Start</string>
    <string name="service">Invoice Id #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">Duration:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="payment1">Payment ?</string>
    <string name="select_your_payment_mode">Select your payment mode</string>
    <string name="payment_prompt">Card details</string>
    <string name="card_number">16 digits Card Number</string>
    <string name="card_number_hint">0000 1111 2222 3333 4444 555</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_expiry_hint">MM/YY</string>
    <string name="card_cvv">CVV</string>
    <string name="pay_now">Pay now</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="about">About</string>
    <string name="qualification">Qualification</string>
    <string name="skills">Skills</string>
    <string name="privious_work">Previous Work</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Address</string>
    <string name="submit">Submit</string>
    <string name="apply_code">Apply Code</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="email_address1">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="password_change">Change Password</string>
    <string name="language">Language</string>
    <string name="set_address">Set Address</string>
    <string name="set_home_address">Set Home Address</string>
    <string name="set_office_address">Set Office Address</string>
    <string name="signout">Sign Out</string>
    <string name="enter_password">Your Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="didn_t_have_any_account">Don\'t have an account?</string>
    <string name="first_name">Full Name</string>
    <string name="enter_password_again">Re-enter Password</string>
    <string name="referal">Enter Referral Code</string>
    <string name="do_you_have_an_account_already">Do you have an account already?</string>
    <string name="job_id">Job ID:</string>
    <string name="services_type">Services type:</string>
    <string name="apply">Apply for this job</string>
    <string name="reject1">Cancel Job</string>
    <string name="start_job">Start Job</string>
    <string name="inprogress">In progress</string>
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="review_by">Review By</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="createnote">Create note</string>
    <string name="semi_transparent">#50000000</string>
    <string name="cancel1">Cancel</string>
    <string name="add">Add</string>
    <string name="add_video_url">Add Video Url</string>
    <string name="enter_youtube_url">Enter Youtube Url *</string>
    <string name="save">Save</string>
    <string name="apply_job">Apply Job</string>
    <string name="write_description">Write Description</string>
    <string name="price">Price</string>
    <string name="edit_about_me">Edit About Me</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="select_your_speciality">Select Your Speciality</string>
    <string name="your_name">Your Name</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_city">Your City</string>
    <string name="your_country">Your Country</string>
    <string name="your_location">Your Location</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="my_rate">My Rate</string>
    <string name="artist_name">Artisan Name</string>
    <string name="artist_name_msg">Please enter your name</string>
    <string name="artist_category">Category</string>
    <string name="artist_category_msg">Click here to select Category</string>
    <string name="artist_city">City</string>
    <string name="artist_city_msg">Please enter your city</string>
    <string name="artist_location">Location</string>
    <string name="artist_location_msg">Click here to select your location (from Map)</string>
    <string name="artist_rate">Rate</string>
    <string name="artist_rate_msg">Please enter your hourly Rate</string>
    <string name="artist_bio_msg">Please write a short bio</string>
    <string name="your_description">Your Description</string>
    <string name="your_description_msg">Please enter your description</string>
    <string name="currency_msg">Currency</string>
</resources>